fix/tests: added integration tests